--- a/styles/style.css
+++ b/styles/style.css
@@ -124,11 +124,12 @@
     right: 0;
 }
 body{
-    background-image: url(bg5.jpg);
+    background-image: url(./images/bg5.jpg);
 }
 h1{
     text-align: center;
     color:rgb(211, 185, 222);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 30px;
+
 }
